# ZinTest

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cli/: main.cpp
compiler/: CMakeLists.txt
compiler/src/cmd_line/: main.cpp
compiler/src/parser/: lexer_token_types.hpp  parser.cpp  parser.hpp  token_type.hpp
compiler/src/parser/fs/: file_reader.cpp  file_reader.hpp
compiler/src/parser/lexer/: lexer.cpp  lexer.hpp  lexer_token.hpp
compiler/src/statements/: branch_statement.hpp  statement.hpp
include/: peeking_iterable.hpp  print_helpers.cpp  print_helpers.hpp
vm/src/: vm.cpp  vm.hpp
